// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <UserAccountPanel /> should renders with props correctly 1`] = `
<div
  className="dropdown-user dropdown-menu-right dropdown-menu"
>
  <div
    className="user-profile-info"
  >
    <div
      className="user-profile-info__item name"
      onClick={[Function]}
    >
      Bob
       
      Smith
    </div>
    <div
      className="user-profile-info__descr"
    >
      <div
        className="user-profile-info__item role"
      >
        IDCR
      </div>
      <div
        className="user-profile-info__item email"
      >
        bob.smith@gmail.com
      </div>
      <div
        className="user-profile-info__item birthday"
      >
        10/05/2099
      </div>
    </div>
    <PTButton
      className="btn btn-theme btn-block btn-signout"
      onClick={[Function]}
    >
      <div>
        <span
          className="brn-text"
        >
          Sign Out
        </span>
         
        <i
          className="btn-icon fa fa-sign-out"
        />
      </div>
    </PTButton>
  </div>
</div>
`;

exports[`Component <UserAccountPanel /> should renders with props correctly with isShowUserProfileSettings  1`] = `
<div
  className="dropdown-user dropdown-menu-right dropdown-menu"
>
  <div
    className="user-profile-info"
  >
    <div
      className="user-profile-info__item name"
      onClick={[Function]}
    >
      Bob
       
      Smith
    </div>
    <div
      className="user-profile-info__descr"
    >
      <div
        className="user-profile-info__item role"
      >
        IDCR
      </div>
      <div
        className="user-profile-info__item email"
      >
        bob.smith@gmail.com
      </div>
      <div
        className="user-profile-info__item birthday"
      >
        10/05/2099
      </div>
    </div>
    <PTButton
      className="btn btn-theme btn-block btn-signout"
      onClick={[Function]}
    >
      <div>
        <span
          className="brn-text"
        >
          Sign Out
        </span>
         
        <i
          className="btn-icon fa fa-sign-out"
        />
      </div>
    </PTButton>
  </div>
  <Connect(UserAccountPanelSettings) />
</div>
`;
